@@ -28,7 +28,11 @@ Release 2.7.1 - UNRELEASED
     auto-failover enabled. (Akira AJISAKA via wangda)
 
     YARN-3469. ZKRMStateStore: Avoid setting watches that are not required. 
+<<<<<<< HEAD
     (Jun Gong via kasha)
+=======
+    (Jun Hong via kasha)
+>>>>>>> fbd4bbb... YARN-3469. ZKRMStateStore: Avoid setting watches that are not required. (Jun Hong via kasha)
 
   BUG FIXES
 
